todo_app_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-app  
  labels:
    app: todo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: todo
  template:
    metadata:
      labels:
        app: todo
    spec:
      containers:
      - name: todo-app
        image: pradipkv/todo_app
        ports:
        - containerPort: 8000
