service_loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-app-lb  
spec:
  type: LoadBalancer
  selector:
    app: todo
  ports:
  # By default and for convenience, the `targetPort` is set to the same value as the `port` field.
    - protocol: TCP
      port: 8000
      targetPort: 8000
