ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-todo-app
spec:
  rules:
  - host: "kub.fro.com"
    http:
      paths:
      - pathType: Prefix
        path: "/path"
        backend:
          service:
            name: todo-app-nodeport
            port:
              number: 8000
